# networking-and-encryption

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
app/: CMakeLists.txt
app/crypto/: CMakeLists.txt  Window.cpp  Window.h  main.cpp  panels.cpp  panels.h
app/crypto/res/styles/: style.qss
app/net/: CMakeLists.txt
app/net/client/cli/: main.cpp
app/net/client/common/: ClientAppContext.cpp  ClientAppContext.h  ClientArgs.cpp  ClientArgs.h  models.h
app/net/client/gui/: ChatApplication.cpp  ChatApplication.h  main.cpp  theme.h
app/net/common/: CoreApplication.cpp  CoreApplication.h  IApplication.h
app/net/resources/: client_icon.h  server_icon.h
app/net/server/cli/: main.cpp
app/net/server/common/: ServerAppContext.cpp  ServerAppContext.h  ServerArgs.cpp  ServerArgs.h
app/net/server/gui/: ServerDashboard.cpp  ServerDashboard.h  main.cpp
src/crypto/: CMakeLists.txt
src/crypto/classic/: Affine.cpp  Affine.h  CMakeLists.txt  Caesar.cpp  Caesar.h  Hill.cpp  Hill.h  ICipher.h  Playfair.cpp  Playfair.h  Vigenere.cpp  Vigenere.h
src/crypto/core/: CMakeLists.txt  types.h  utils.cpp  utils.h
src/crypto/core/asymmetric/: IAsymmetricCipher.h
src/crypto/core/symmetric/: IBlockCipher.h  ICipherMode.h
src/crypto/modern/: CMakeLists.txt
src/crypto/modern/asymmetric/: RSA.cpp  RSA.h
src/crypto/modern/symmetric/block/: AES.cpp  AES.h  DES.cpp  DES.h
src/crypto/standard/: CMakeLists.txt
src/crypto/standard/openssl/: AESCBC.cpp  AESCBC.h  DES.cpp  DES.h  RSA.cpp  RSA.h
src/net/: CMakeLists.txt
src/net/client/: Client.cpp  Client.h  ClientFactory.cpp  ClientFactory.h
src/net/client/transport/: PlainTransport.cpp  PlainTransport.h  SecureTransport.cpp  SecureTransport.h
src/net/core/: IClient.h  IServer.h  ISession.h  ITransport.h
src/net/protocol/: Json.h  Message.cpp  Message.h  MessageType.h
src/net/server/: Router.cpp  Router.h  Server.cpp  Server.h  ServerConfig.cpp  ServerConfig.h  ServerController.cpp  ServerController.h  SessionManager.cpp  SessionManager.h
src/net/server/sessions/: PlainSession.cpp  PlainSession.h  SecureSession.cpp  SecureSession.h
tests/catch2/: CMakeLists.txt  test_classic.cpp  test_modern.cpp  test_performance.cpp  test_standard.cpp
